--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -7,10 +7,21 @@
     <servlet-name>GetAllGoods</servlet-name>
     <servlet-class>servlets.GetAllGoodsServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>AddToCartServlet</servlet-name>
+    <servlet-class>servlets.AddToCartServlet</servlet-class>
+  </servlet>
+
 
   <servlet-mapping>
     <servlet-name>GetAllGoods</servlet-name>
     <url-pattern>/getAllGoods</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AddToCartServlet</servlet-name>
+    <url-pattern>/addToCartServlet</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
