--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -13,6 +13,13 @@
     <servlet-name>AddToCartServlet</servlet-name>
     <servlet-class>servlets.AddToCartServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>ProcessCart</servlet-name>
+    <servlet-class>servlets.ProcessCart</servlet-class>
+  </servlet>
+
 
 
   <servlet-mapping>
@@ -22,6 +29,10 @@
   <servlet-mapping>
     <servlet-name>AddToCartServlet</servlet-name>
     <url-pattern>/addToCartServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ProcessCart</servlet-name>
+    <url-pattern>/processCart</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
